# Phoenyx-I

./: .gitignore  LICENSE.md  README.md
.github/: CONTRIBUTING.md
OrbbecSDK_ROS2/: README.md
YDLidar-SDK/cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  YDLIDAR_SDK.pc  cmake_install.cmake  compile_commands.json  et_test  gs_ota  gs_test  gs_test2  install_manifest.txt  lidar_c_api_test  scl_test  sdm18_test  sdm_test  tea_test  tia_test  tmini_test  tof_test  tri_and_gs_test  tri_restart  tri_test  ydlidar_config.h  ydlidar_sdkConfigVersion.cmake
control/: package.xml  setup.py
control/config/: nav2_params.yaml  params.yaml
control/control/: codigo_rechulon.py  linea_media.py  linea_media2.py
control/launch/: control.launch.py  planificador.launch.py
guiado/: setup.py
guiado/config/: Aruco_pos.yaml  Aruco_pos_5x5.yaml  mapper_params_online_async_guiado.yaml  nav2_params_guiado.yaml  nav2_params_guiado_backup.yaml  waypoints.yaml
guiado/guiado/: brain_guiado.py  localizacion_aruco.py
guiado/launch/: guiado.launch.py  online_async_launch.py  planificador.launch.py
guiado/map/: map_5x5_lirilarila.pgm  map_5x5_lirilarila.yaml  map_5x5_lirililarila_s.data  map_5x5_retiro2.pgm  map_7x7.pgm  (+11 more)
osr_control/: setup.py
osr_control_challenge/: package.xml  setup.cfg  setup.py
osr_control_challenge/osr_control_challenge/: maze_navigation.py
osr_gazebo/: CMakeLists.txt  README.md
percepcion/: package.xml  setup.py
phoenyx_nodes/: package.xml  setup.cfg  setup.py
planificador/: package.xml  setup.py
(+101 files in other folders)
