<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osr_control_challenge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="judith.salvador@estudiantat.upc.edu">judith</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>adafruit_bno055</depend>
  <depend>robot_localization</depend>
  <depend>cv2</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
